Fix bug with extra space below footer

--- a/website/css/app.css
+++ b/website/css/app.css
@@ -56,6 +56,10 @@ body {
     padding-right: 0px;
 }
 
+#tech-stack {
+  overflow: hidden;
+}
+
 .border-all {
     border: 10px solid #d8dcdd !important;
 }
